--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,25 @@
 # dependencies
-/node_modules
+/server/node_modules
 /client/node_modules
 
 # testing
 /client/coverage
-/data
+/server/data
 
 # production
 /client/build
+/server/build
 
 # misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+/server/.DS_Store
+/server/.env.local
+/server/.env.development.local
+/server/.env.test.local
+/server/.env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+/server/npm-debug.log*
+/server/yarn-debug.log*
+/server/yarn-error.log*
 
 /client/.DS_Store
 /client/.env.local
