--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,8 @@
     "react-scripts": "2.0.5"
   },
   "scripts": {
-    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "start": "npm run server",
     "server": "node server.js",
-    "client": "node start-client.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
